<resources>
    <string name="app_name">Visitor Management</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login">Login</string>
    <string name="registration">Register</string>
    <string name="email">E-Mail</string>

    <!-- MENU -->
    <string name="meetings">Meetings</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="rooms">Rooms</string>
    <string name="companies">Companies</string>
    <string name="logout">Logout</string>

    <!-- WELCOME -->
    <string name="welcome">Welcome</string>
    <string name="scanQR">Please scan your QR code ...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>

    <!-- LOGIN RESET/FORGET -->
    <string name="name">Name</string>
    <string name="enter_name">Please enter your name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="enter_password">**********</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset">Reset password</string>
    <string name="forget_success">Reset code has been sent to your email address.</string>
    <string name="reset_success">Successfully resetted your password.</string>
    <string name="token">Reset token</string>
    <string name="enter_token">Enter your 4 digit token</string>

    <!-- ROOM -->
    <string name="new_room">Create new room</string>
    <string name="delete_room">Delete room</string>
    <string name="delete_room_title">Delete this room?</string>
    <string name="delete_room_text">This step can not be undone.</string>
    <string name="delete_room_success">Room has been deleted.</string>

    <!-- DASHBOARD -->
    <string name="dashboard_active">Currently Checked In</string>
    <string name="dashboard_planned">Expected today</string>
    <string name="dashboard_total">Total</string>
    <string name="dashboard_companies">Today\'s companies</string>
    <string name="dashboard_date_select">Select date</string>
    <string name="dashboard_delete_title">Delete Visitor?</string>
    <string name="dashboard_delete_text">Are you sure to delete this visitor?</string>
    <string name="dashboard_delete_forbidden">Visitor can not be deleted because the visitor is either checked in or checked out.</string>

    <!-- MEETING -->
    <string name="create_meeting">Create Meeting</string>
    <string name="update_meeting">Update Meeting</string>
    <string name="new_meeting">Create new Meeting</string>
    <string name="meeting_date">Date</string>
    <string name="meeting_date_placeholder">Enter date</string>
    <string name="meeting_duration">Meeting duration</string>
    <string name="meeting_duration_placeholder">Enter meeting duration in minutes</string>
    <string name="meeting_room">Select meeting room</string>
    <string name="meeting_add_visitor">Add visitor</string>
    <string name="meeting_upcoming">Upcoming meetings</string>
    <string name="meeting_details">Meeting information</string>
    <string name="meeting_attendees">Meeting attendees</string>
    <string name="meeting_cancel_title">Cancel Meeting?</string>
    <string name="meeting_cancel_text">Are you sure to cancel this meeting? All attendees will receive a notification.</string>

    <!-- ADD VISITOR -->
    <string name="dialog_visitor_heading">Add new visitor</string>
    <string name="dialog_visitor_name">Enter name</string>
    <string name="dialog_visitor_email">Enter e-mail address</string>
    <string name="dialog_visitor_tel">Enter telephone number</string>
    <string name="dialog_visitor_company">Select company</string>
    <!-- EDIT VISITOR -->
    <string name="edit_visitor_heading">Edit visitor information</string>
    <string name="host_label">Host</string>
    <string name="room_label">Room</string>
    <string name="update_visitor">Update visitor</string>
    <string name="edit_visitor_host">Host name</string>
    <string name="edit_visitor_room">Meeting room</string>
    <string name="visitor_name_label">Name</string>
    <string name="visitor_email_label">E-Mail</string>
    <string name="visitor_tel_label">Phone</string>

    <!-- COMPANY -->
    <string name="new_company">Create new Company</string>
    <string name="create_company">Create Company</string>
    <string name="delete_company">Delete Company</string>
    <string name="list_companies">Select Company</string>
    <string name="company_delete_title">Delete Company?</string>
    <string name="company_delete_text">Are you sure to delete this company?</string>

    <!-- REGISTER -->
    <string name="enter_email">Please enter a valid email address</string>
    <string name="choose_password">Please choose a valid password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password_again">Please enter your password again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
