<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:focusable="false"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/dashboard_date_select"
        android:inputType="date" />

    <ListView
        android:id="@+id/visitorListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activeTextView"
                    android:padding="12dp"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dashboard_active" />

                <TextView
                    android:id="@+id/activeValueTextView"
                    android:padding="12dp"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <View
                android:id="@+id/divider0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/plannedTextView"
                    android:padding="12dp"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dashboard_planned" />

                <TextView
                    android:id="@+id/planendValueTextView"
                    android:padding="12dp"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalTextView"
                    android:padding="12dp"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dashboard_total" />

                <TextView
                    android:id="@+id/totalValueTextView"
                    android:padding="12dp"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/companiesTextView"
                    android:padding="12dp"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dashboard_companies" />

                <TextView
                    android:id="@+id/companiesValueTextView"
                    android:padding="12dp"
                    android:textSize="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <com.anychart.AnyChartView
                android:id="@+id/weekDataAnyChartView"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" />

            <com.anychart.AnyChartView
                android:id="@+id/companyDataAnyChartView"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
